# esp32_zephyr

./: .gitignore  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  prj.conf  sample.yaml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: adc_h.doctree  nvs_h.doctree  pwm_h.doctree  wifi_h.doctree
.github/: copilot-instructions.md
.github/workflows/: build_docs.yml  esp32_zephyr_build.yml
_modules/: adc.h.html  cmd_interpreter.h.html  nvs.h.html  pwm.h.html  server.h.html  wifi.h.html
_sources/: index.md.txt
_sources/api/: adc_h.rst.txt  pwm_h.rst.txt  wifi_h.rst.txt
api/: adc_h.html  cmd_interpreter_h.html  nvs_h.html  pwm_h.html  server_h.html  wifi_h.html
boards/: esp32_devkitc_procpu.conf  esp32_devkitc_procpu.overlay  esp32_devkitc_wroom.conf
cmake/: cmake-git-version-tracking.cmake
doc/: CMakeLists.txt  conf.py
doc/api/: nvs_h.rst
proto/: cmds.c  cmds.options  cmds.proto
src/: adc.c  adc.h  cmd_interpreter.c  cmd_interpreter.h  main.c  nvs.c  nvs.h  pwm.c  pwm.h  server.c  server.h  version.h  wifi.c  wifi.h
test/: esp32_client.go  esp32_client.py
test/go/: esp32_client.go
test/py/: esp32_client.py
